# ChangeLog for mail-filter/amavisd-new
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-filter/amavisd-new/ChangeLog,v 1.126 2008/08/29 22:04:28 maekke Exp $

  29 Aug 2008; Markus Meier <maekke@gentoo.org> amavisd-new-2.6.1.ebuild:
  amd64/x86 stable, bug #235912

  23 Aug 2008; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
  add GLEP 56 USE flag desc from use.local.desc

*amavisd-new-2.6.1 (13 Jul 2008)

  13 Jul 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  +amavisd-new-2.6.1.ebuild:
  Version bump, #230652

  17 Jun 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  -files/amavisd-new-2.4.1-amavisd.conf-gentoo.patch,
  -files/amavisd-new-2.4-qmail-lf-workaround.patch,
  -amavisd-new-2.4.1.ebuild, -amavisd-new-2.5.3.ebuild,
  amavisd-new-2.6.0.ebuild:
  Added ~ppc (#219448), Clean-up

  17 Jun 2008; Raúl Porcel <armin76@gentoo.org> amavisd-new-2.6.0.ebuild:
  Add ~alpha/~sparc wrt #219448

  16 Jun 2008; Brent Baude <ranger@gentoo.org> amavisd-new-2.6.0.ebuild:
  Marking amavisd-new-2.6.0 ~ppc64 for bug 219448

*amavisd-new-2.6.0 (14 Jun 2008)

  14 Jun 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  +files/amavisd-new-dkimconf.patch, +amavisd-new-2.6.0.ebuild:
  Version bump (#219448)

  23 Mar 2008; Markus Meier <maekke@gentoo.org> amavisd-new-2.5.2.ebuild:
  amd64 stable, bug #199333

  01 Mar 2008; Andrej Kacian <ticho@gentoo.org> amavisd-new-2.4.1.ebuild,
  amavisd-new-2.5.2.ebuild, amavisd-new-2.5.3.ebuild:
  Moved milter dependency atom from RDEPEND to DEPEND and changed order, so
  libmilter is considered first. Bug #208090.

  22 Feb 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  amavisd-new-2.5.2.ebuild:
  ppc stable, bug #199333

  17 Feb 2008; Raúl Porcel <armin76@gentoo.org> amavisd-new-2.5.2.ebuild:
  alpha/sparc stable wrt #199333

  05 Feb 2008; Markus Rothe <corsair@gentoo.org> amavisd-new-2.5.2.ebuild:
  Stable on ppc64
