@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/mail-filter/amavisd-new/amavisd-new-2.6.0.ebuild,v 1.4 2008/06/17 16:04:48 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-filter/amavisd-new/amavisd-new-2.6.0.ebuild,v 1.5 2008/11/18 16:08:05 tove Exp $
 
 inherit eutils
 
@@ -29,7 +29,7 @@ RDEPEND="${DEPEND}
 	|| ( app-arch/unrar app-arch/rar )
 	app-arch/zoo
 	>=dev-perl/Archive-Zip-1.14
-	>=dev-perl/Compress-Zlib-1.35
+	>=virtual/perl-Compress-Zlib-1.35
 	dev-perl/Convert-TNEF
 	>=dev-perl/Convert-UUlib-1.08
 	virtual/perl-MIME-Base64
