@@ -1,6 +1,10 @@
 # ChangeLog for mail-filter/amavisd-new
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-filter/amavisd-new/ChangeLog,v 1.126 2008/08/29 22:04:28 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-filter/amavisd-new/ChangeLog,v 1.127 2008/11/18 16:08:05 tove Exp $
+
+  18 Nov 2008; Torsten Veller <tove@gentoo.org> amavisd-new-2.5.2.ebuild,
+  amavisd-new-2.6.0.ebuild, amavisd-new-2.6.1.ebuild:
+  New virtuals: Compress-Zlib
 
   29 Aug 2008; Markus Meier <maekke@gentoo.org> amavisd-new-2.6.1.ebuild:
   amd64/x86 stable, bug #235912
